--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 d-block d-sm-flex mb-3 justify-content-end align-items-center">
+            <div class="col-12 col-sm-6 d-block d-block d-sm-none d-sm-flex mb-3 justify-content-end align-items-center">
                 <div class="d-grid gap-2 ">
-                    <a href="Formulario.html" class=" btn-form text-center" target="_blank">Pedir Turno</a>
-
+                    <a href="formulario.html" class=" btn-form text-center">Pedir Turno</a>
                 </div>
             </div>
         </div>
@@ -55,7 +54,7 @@
                     <a class="nav-link" href="faqs.html">Preguntas Frecuentes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Tienda</a>
+                    <a class="nav-link" href="Formulario.html">Turnos</a>
                 </li>
             </ul>
         </div>
