--- a/servicios.html
+++ b/servicios.html
@@ -25,11 +25,6 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 d-block d-sm-flex mb-3 justify-content-end align-items-center">
-                <div class="d-grid gap-2 ">
-                    <a href="Formulario.html" class=" btn-form text-center" target="_blank">Ir al Formulario</a>
-                </div>
-            </div>
         </div>
     </header>
 
@@ -53,7 +48,7 @@
                     <a class="nav-link" href="faqs.html">Preguntas Frecuentes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Tienda</a>
+                    <a class="nav-link" href="Formulario.html">Turnos</a>
                 </li>
             </ul>
         </div>
